# rust-game-template

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs  example-region.idm  flake.nix  gametemplate.wasm  gl.js  sapp_jsutils.js
.github/workflows/: main.yml
content/: Cargo.toml  build.rs
content/src/: atlas.rs  block.rs  data.rs  lib.rs  location.rs  mapgen.rs  sector_map.rs  tile.rs  world.rs  zone.rs
data/: armory.idm  bestiary.idm  loadout.idm  plurals.idm  scenario.idm  settings.idm  world.idm
data/campaign/: demo-10.idm
data/vaults/: simple.idm
derives/: Cargo.toml
derives/src/: lib.rs
derives/tests/: lib.rs
doc/: notes.otl
engine/: Cargo.toml  build.rs
engine/src/: ability.rs  action.rs  ai.rs  atlas.rs  block.rs  core.rs  data.rs  ecs.rs  entity.rs  entity_spec.rs  fov.rs  item.rs  lib.rs  location.rs  mapgen.rs  mob.rs  msg.rs  patch.rs  pathing.rs  placement.rs  power.rs  prelude.rs  prototypes.rs  runtime.rs  space.rs  terrain.rs  tile.rs  time.rs  world.rs  worldfile.rs
examples/: dump-world.rs  mapgen.rs  tiled-export.rs
fov/: Cargo.toml
fov/src/: fov.rs  lib.rs  square.rs
gfx/: Cargo.toml
gfx/src/: buffer.rs  cursor.rs  font.rs  image.rs  lib.rs  pixel.rs  prelude.rs  window.rs
githooks/: pre-commit  pre-push
src/: game_screen.rs  main.rs  map_view.rs  run.rs  view.rs  wasm_getrandom.rs
ui/: Cargo.toml
ui/src/: anim.rs  backdrop.rs  camp_menu.rs  command.rs  cursor.rs  dialog.rs  game.rs  input.rs  lib.rs  map_display.rs  prelude.rs  tile_display.rs  widget.rs  window.rs
util/: Cargo.toml
util/benches/: grid.rs
util/examples/: logosify.rs
util/src/: ascii_map.rs  axis_box.rs  bits.rs  cloud.rs  distribution.rs  geom.rs  grammar.rs  grid.rs  idm.rs  interned_string.rs  keyboard_layout.rs  lazy_res.rs  lib.rs  logos.rs  mung.rs  parse.rs  path.rs  res.rs  rng.rs  silo.rs  str_ext.rs  sync.rs  sys.rs  text.rs  unchecked_write.rs
web/: audio.js  gl.js  index.html  quad-storage.js  sapp_jsutils.js
world/: Cargo.toml
world/src/: atlas.rs  block.rs  data.rs  lib.rs  location.rs  mapgen.rs  reference.rs  sector_map.rs  waypoints.rs  world.rs  zone.rs
