[package]
name = "gametemplate"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
edition = "2021"

[profile.release-lto]
inherits = "release"
strip = true
opt-level = 's'
lto = true
panic = 'abort'
codegen-units = 1

[workspace]
members = ["fov", "gfx", "util"]

[dependencies]
fov = { path = "fov" }
gfx = { path = "gfx" }
util = { path = "util" }
