[package]
name = "gametemplate"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Base project for game development"
keywords = ["gamedev"]
license = "GPL3"
edition = "2021"

[features]
# For convenience, use GUI backend by default. When this default is enabled,
# the TTY backend must be built with "--no-default-features --features=tty"
default = ["gui"]

gui = ["navni/gui"]
tty = ["navni/tty"]

[profile.release-lto]
inherits = "release"
strip = true
opt-level = 's'
lto = true
panic = 'abort'
codegen-units = 1

[workspace]
members = ["fov", "engine", "gfx", "ui", "util"]

[dependencies]
clap = { version = "4", features = ["derive"] }
engine = { path = "engine" }
fov = { path = "fov" }
gfx = { path = "gfx" }
log = "0.4.20"
navni = { git = "https://github.com/rsaarelm/navni" }
rand = "0.8"
ui = { path = "ui" }
util = { path = "util" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
