[package]
name = "gametemplate"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Base project for game development"
keywords = ["gamedev"]
license = "GPL3"
edition = "2024"
rust-version = "1.85"
build = "build.rs"

[features]
# For convenience, use GUI backend by default. When this default is enabled,
# the TTY backend must be built with "--no-default-features --features=tty"
default = ["gui"]

gui = ["navni/gui"]
tty = ["navni/tty"]

[profile.release-lto]
inherits = "release"
strip = true
opt-level = 's'
lto = true
panic = 'abort'
codegen-units = 1

[workspace]
members = ["derives", "fov", "engine", "gfx", "ui", "util", "world"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
engine = { path = "engine" }
fov = { path = "fov" }
gfx = { path = "gfx" }
glam = { version = "0.30", features = ["serde"] }
idm = "0.4"
log = "0.4"
navni = { git = "https://github.com/rsaarelm/navni" }
rand = "0.9"
snap = "1"
ui = { path = "ui" }
util = { path = "util" }
world = { path = "world" }

# TODO: getrandom 0.2 is outdated, but it seems we need to have the feature
# setter here for WASM while it's being pulled in through dependencies. See
# about dropping it once all dependencies have getrandom 0.3 or better.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
snap = "1"
util = { path = "util" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
