[package]
name = "content"
version = "0.1.0"
edition = "2021"
description = "Game content datatypes and generation"
build = "build.rs"

[dependencies]
anyhow = "1"
derive_more = "0.99"
fdeflate = "0.3"
glam = { version = "0.25", features = ["serde"] }
idm = "0.4"
indexmap = { version = "2", features = ["serde"] }
log = "0.4"
pathfinding = "4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
static_assertions = "1"
strum = { version = "0.25", features = ["derive"] }
util = { path = "../util" }

[build-dependencies]
fdeflate = "0.3"
util = { path = "../util" }
