[package]
name = "content"
version = "0.1.0"
edition = "2021"
description = "Game content datatypes and generation"

[dependencies]
anyhow = "1"
derive_more = { version = "1", features = ["deref_mut", "from"] }
glam = { version = "0.29", features = ["serde"] }
idm = "0.4"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.13"
log = "0.4"
memoize = "0.4"
pathfinding = "4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
static_assertions = "1"
strum = { version = "0.26", features = ["derive"] }
util = { path = "../util" }
