[package]
name = "derives"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
edition = "2024"
description = "Custom procedural derive macros"

[lib]
proc-macro = true

[dependencies]
bitflags = "2"
quote = "1.0"
syn = { version = "2", features = ["full"] }
util = { path = "../util" }

[dev-dependencies]
idm = "0.4"
serde = "1"
