[package]
name = "engine"
version = "0.1.0"
edition = "2021"
description = "Core game logic"

[dependencies]
anyhow = "1"
content = { path = "../content" }
derive_more = "0.99"
fdeflate = "0.3"
fov = { path = "../fov" }
glam = { version = "0.27", features = ["serde"] }
hecs = { version = "0.10", features = ["row-serialize"] }
idm = "0.4"
log = "0.4"
pathfinding = "4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
strum = { version = "0.26", features = ["derive"] }
util = { path = "../util" }

[dev-dependencies]
pretty_assertions = "1"
quickcheck = "1"
quickcheck_macros = "1"
