[package]
name = "gfx"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
edition = "2021"
description = "Graphics and user interface primitives"

[dependencies]
util = { path = "../util" }

derive_more = "0.99"
glam = { version = "0.25", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["png"] }
itertools = "0.12"
navni = { git = "https://github.com/rsaarelm/navni" }
regex = "1"
