[package]
name = "gfx"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
edition = "2024"
description = "Graphics and user interface primitives"

[dependencies]
util = { path = "../util" }

derive_more = "2"
glam = { version = "0.30", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["png"] }
itertools = "0.14"
navni = { git = "https://github.com/rsaarelm/navni" }
regex = "1"
