[package]
name = "ui"
version = "0.1.0"
edition = "2021"
description = "Game display and user interface"

[dependencies]
engine = { path = "../engine" }
gfx = { path = "../gfx" }
util = { path = "../util" }

derive_deref = "1"
navni = { git = "https://github.com/rsaarelm/navni" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
