[package]
name = "ui"
version = "0.1.0"
edition = "2021"
description = "Game display and user interface"

[dependencies]
anyhow = "1"
content = { path = "../content" }
derive_more = "0.99"
engine = { path = "../engine" }
gfx = { path = "../gfx" }
glam = { version = "0.25", features = ["serde"] }
idm = "0.4"
log = "0.4"
navni = { git = "https://github.com/rsaarelm/navni" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
util = { path = "../util" }
