[package]
name = "util"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
edition = "2021"
description = "Miscellaneous low-level utilities"

[dependencies]
anyhow = "1"
derive_deref = "1"
glam = { version = "0.24", features = ["serde"] }
idm = "0.4"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.11"
num-traits = "0.2"
pathfinding = "4"
rand = "0.8"
rand_xorshift = { version = "0.3", features = ["serde1"] }
regex = "1"
rustc-hash = "1"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
twox-hash = "1"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[dev-dependencies]
fraction = "0.14"
quickcheck = "1"
quickcheck_macros = "1"
