[package]
name = "util"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
edition = "2021"
description = "Miscellaneous low-level utilities"

[dependencies]
anyhow = "1"
bitflags = "2"
derive_more = { version = "2", features = ["deref"] }
glam = { version = "0.30", features = ["serde"] }
idm = "0.4"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.14"
memoize = "0.5"
nom = "8"
num-traits = "0.2"
pathfinding = "4"
rand = "0.9"
rand_xorshift = { version = "0.4", features = ["serde"] }
regex = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
twox-hash = "2"
whoami = "1"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[dev-dependencies]
fraction = "0.15"
quickcheck = "1"
quickcheck_macros = "1"
