[package]
name = "world"
version = "0.1.0"
edition = "2021"
description = "Game world datatypes and generation"

[dependencies]
anyhow = "1"
bitflags = "2"
derive_more = { version = "2", features = ["deref_mut", "from"] }
derives = { path = "../derives" }
glam = { version = "0.30", features = ["serde"] }
idm = "0.4"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.14"
log = "0.4"
memoize = "0.5"
nom = "8"
pathfinding = "4"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
static_assertions = "1"
strum = { version = "0.27", features = ["derive"] }
util = { path = "../util" }

[dev-dependencies]
pretty_assertions = "1"
